--- a/src/App.css
+++ b/src/App.css
@@ -18,20 +18,26 @@ body {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  margin-top: 100px;
+  margin-top: 150px;
   height: 100px;
   width: 200px;
   border-radius: 50px;
   border: none;
 }
 
+.Ala-aula {
+  background-color: #DA2525;
+}
+
+.Yla-aula {
+  background-color: #008D37;
+}
 button {
   border: none;
-  background-color: #008D37;
-  color: #133713;
   font-size: 22px;
   border-radius: 50px;
-  
+   background-color: #DA2525;
+  color: #FF7364;
 }
 button.hover {
   height: 120px;
